--- a/www/Activities.html
+++ b/www/Activities.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eleganter - New Amazing HTML5 Template</title>
+    <title>Activities</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -25,6 +25,11 @@
     <!-- MAIN -->
     <main role="main">
       <!-- Content -->
+      <h4>Ignite:</h4>
+      <h6>Who:</h6><p style="display: inline">Junior High</p>
+      <h6>What:</h6><p style="display: inline">Big group teaching followed by Core Groups, which are small discussion groups to dive deeper into God's Word</p>
+      <h6>Who:</h6><p style="display: inline">Junior High</p>
+      <h6>Who:</h6><p style="display: inline">Junior High</p>
       
     <script type="text/javascript" src="js/responsee.js"></script>
     <script type="text/javascript" src="owl-carousel/owl.carousel.js"></script>
