--- a/www/contact.html
+++ b/www/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KSM-Webalike</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -58,7 +58,7 @@
                 <div class="margin-left-70 margin-bottom-30">
                   <h3 class="margin-bottom-0">E-mail</h3>
                   <p>Jenea King: <a href="mailto:jking@kingsland.org">jking@kingsland.org</a><br>
-                      Ryan Cook: <a href="mailto:rcook@kingsland.org">rcook@kingsland.org</a>
+                      Joe Landi: <a href="mailto:rcook@kingsland.org">jlandi@kingsland.org</a>
                   </p>              
                 </div>
                 <div class="float-left">
