--- a/www/about.html
+++ b/www/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eleganter - New Amazing HTML5 Template</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -26,7 +26,7 @@
       <h1 style="color: rgb(0, 167, 157); font-family: times new roman"><b>Welcome to the Student Ministry</b></h1>
       <p style="font-family: times new roman">Welcome to the Kingsland Student Ministry – the KSM! Our staff, students, and volunteers are very excited about the chance to get to know you and your family, and to partner with you on your spiritual journey with the Lord. It is our goal to build lasting friendships, to teach the Bible, to help you discover and develop your gifts to serve our church and community, to share the good news of Jesus with our school campuses, and to grow to become true disciples of Christ. We can’t wait to get started and hope you will find information here that will be a great guide as you search for how to connect with us.</p>
       <h2 style="color: rgb(0, 167, 157); font-family: times new roman"><b>About the App</b></h2> 
-      <p style="font-family: times new roman">This is a basic design to get a feel for what would most benefit the KSM. If you have any requests or suggestions, please contact our KSM Media Team <a href="mailto:ksmmedia@kingsland.org" style="color: blue">ksmmedia@kingsland.org</a></p>
+      <p style="font-family: times new roman">This is a basic design to get a feel for what would most benefit the KSM. If you have any requests, suggestions, or would like to help program app updates please contact our KSM Media Team <a href="mailto:ksmmedia@kingsland.org" style="color: blue">ksmmedia@kingsland.org</a></p>
     <script type="text/javascript" src="js/responsee.js"></script>
     <script type="text/javascript" src="owl-carousel/owl.carousel.js"></script>
     <script type="text/javascript" src="js/template-scripts.js"></script>
