--- a/www/Activities.html
+++ b/www/Activities.html
@@ -25,6 +25,7 @@
     <!-- MAIN -->
     <main role="main">
       <!-- Content -->
+      <h1 style="font-family: times new roman; text-align: center; background-color: rgb(0, 167, 157); color: rgb(95, 70, 44); height: 50px; font-size: 40px; display: block; width: 100%">Join Us</h1>
       
       <h4 style="margin-top: 5px; margin-bottom: 2px">Fuel</h4>
       <p><strong>Who: </strong>High School</p>
