--- a/www/about.html
+++ b/www/about.html
@@ -23,7 +23,7 @@
     </header>
     
       <!-- Content -->
-      <h1 style="color: rgb(0, 167, 157); font-family: times new roman"><b>Welcome to the Student Ministry</b></h1>
+      <h1 style="font-family: times new roman; text-align: center; background-color: rgb(0, 167, 157); color: rgb(95, 70, 44); height: 50px; font-size: 40px; display: block; width: 100%">Welcome</h1>
       <p style="font-family: times new roman">Welcome to the Kingsland Student Ministry – the KSM! Our staff, students, and volunteers are very excited about the chance to get to know you and your family, and to partner with you on your spiritual journey with the Lord. It is our goal to build lasting friendships, to teach the Bible, to help you discover and develop your gifts to serve our church and community, to share the good news of Jesus with our school campuses, and to grow to become true disciples of Christ. We can’t wait to get started and hope you will find information here that will be a great guide as you search for how to connect with us.</p>
       <h2 style="color: rgb(0, 167, 157); font-family: times new roman"><b>About the App</b></h2> 
       <p style="font-family: times new roman">This is a basic design to get a feel for what would most benefit the KSM. If you have any requests, suggestions, or would like to help program app updates please contact our KSM Media Team <a href="mailto:ksmmedia@kingsland.org" style="color: blue">ksmmedia@kingsland.org</a></p>
