--- a/www/contact.html
+++ b/www/contact.html
@@ -27,7 +27,7 @@
       <!-- Content -->
       <article>
         <header>
-            <a href="mailto:jking@kingsland.org" style="font-family: times new roman; text-align: center; background-color: rgb(0, 167, 157); color: rgb(95, 70, 44); height: 50px; font-size: 40px; display: block; width: 100%">Contact Us</a>
+            <h1 style="font-family: times new roman; text-align: center; background-color: rgb(0, 167, 157); color: rgb(95, 70, 44); height: 50px; font-size: 40px; display: block; width: 100%">Contact Us</h1>
         </header>
 
              
