--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
            font-size:25px; font-family: Impact; color: rgb(95, 70, 44); background-color: rgb(0, 167, 157)">Bio</a>
         <a href="Activities.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 220px; z-index: 2; height: 50px;
            font-size:25px; font-family: Impact; color: rgb(0, 167, 157); background-color: rgb(95, 70, 44)">KSM Activities</a>
-        <a href="products.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 270px; z-index: 2; height: 50px;
+        <a href="Teams.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 270px; z-index: 2; height: 50px;
            font-size:25px; font-family: Impact; color: rgb(95, 70, 44); background-color: rgb(0, 167, 157)">Ministry Teams</a>
         <!-- Bottom Footer -->
         <footer style="position: absolute; left:0;right: 0;bottom: 0; height:73px;">
