--- a/www/Teams.html
+++ b/www/Teams.html
@@ -79,6 +79,8 @@
     <h3>Katalyst Student Leader</h3>
     <p><strong>Contact: </strong> Joe Landi- <a href="jlandi@kingsland.org" style="color:blue">jlandi@kingsland.org</a></p>
     
+    <p>All students interested in Ministry Teams will need to complete an application, and some Ministry Teams will require try-outs.</p>
+    <p><strong>General Contact: </strong> Lindsay Crisanti- <a href="lcrisanti@kingsland.org" style="color:blue">lcrisanti@kingsland.org</a></p>
     
     <!-- FOOTER -->
     <footer>
