--- a/www/Teams.html
+++ b/www/Teams.html
@@ -67,14 +67,14 @@
     <p><strong>Contact: </strong> Chris Kincaid- <a href="ckincaid@kingsland.org" style="color:blue">ckincaid@kingsland.org</a></p>
     
     <div class="float-left">
-         <i class="icon-sli-share text-primary icon3x"></i>
+         <i class="icon-sli-book-open text-primary icon3x"></i>
     </div>
     <h3>Lifegroup Leader</h3>
     <p>The seniors are given an opportunity to lead a junior high LifeGroup on Sunday nights. They must fill out the Kingsland Leadership Application.</p>
     <p><strong>Contact: </strong> Lindsay Crisanti- <a href="lcrisanti@kingsland.org" style="color:blue">lcrisanti@kingsland.org</a></p>
     
     <div class="float-left">
-         <i class="icon-sli-globe text-primary icon3x"></i>
+         <i class="icon-sli-user-follow text-primary icon3x"></i>
     </div>
     <h3>Katalyst Student Leader</h3>
     <p><strong>Contact: </strong> Joe Landi- <a href="jlandi@kingsland.org" style="color:blue">jlandi@kingsland.org</a></p>
