--- a/www/index.html
+++ b/www/index.html
@@ -22,16 +22,18 @@
         <a href="index.html"><img src="img/logo-dark .png"></a>
         </header>
         
-        <a href="about.html" class="button" style="position: absolute; left: 0;right: 0;bottom: 70px; z-index: 2; height: 50px;
+        <a href="about.html" class="button" style="position: absolute; left: 0;right: 0;bottom: 70px; z-index: 2; height: 40px;
            font-size:25px; font-family: Impact; color: rgb(95, 70, 44); background-color: rgb(0, 167, 157)">About</a>
-        <a href="contact.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 120px; z-index: 2; height: 50px;
+        <a href="contact.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 110px; z-index: 2; height: 40px;
            font-size:25px; font-family: Impact; color: rgb(0, 167, 157); background-color: rgb(95, 70, 44)">Contact</a>
-        <a href="Bio.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 170px; z-index: 2; height: 50px;
+        <a href="Bio.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 150px; z-index: 2; height: 40px;
            font-size:25px; font-family: Impact; color: rgb(95, 70, 44); background-color: rgb(0, 167, 157)">Bio</a>
-        <a href="Activities.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 220px; z-index: 2; height: 50px;
+        <a href="Activities.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 190px; z-index: 2; height: 40px;
            font-size:25px; font-family: Impact; color: rgb(0, 167, 157); background-color: rgb(95, 70, 44)">KSM Activities</a>
-        <a href="Teams.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 270px; z-index: 2; height: 50px;
+        <a href="Teams.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 230px; z-index: 2; height: 40px;
            font-size:25px; font-family: Impact; color: rgb(95, 70, 44); background-color: rgb(0, 167, 157)">Ministry Teams</a>
+        <a href="Events.html" class="button" style="position: absolute; left: 0; right: 0; bottom: 270px; z-index: 2; height: 40px;
+           font-size:25px; font-family: Impact; color: rgb(0, 167, 157); background-color: rgb(95, 70, 44)">Upcoming Events</a>   
         <!-- Bottom Footer -->
         <footer style="position: absolute; left:0;right: 0;bottom: 0; height:73px;">
             <section class="padding background-dark full-width">
